--- a/css3Animations.html
+++ b/css3Animations.html
@@ -2,6 +2,7 @@
 <html>
 <script src="animations.js"></script>
 <link rel="stylesheet" type="text/css" src="animations.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 <head>
 </head>
@@ -9,9 +10,16 @@
 <div class="bg"></div>
 <h1>CSS3 Animations</h1>
 
-<ul class="drops">
-	<li></li>
-</ul>
+<div class="cloud">
+	<i class="fas fa-cloud"></i>
+</div>
+<div class="rain">
+	<i class="fas fa-raindrops"></i>
+	<i class="fas fa-tint"></i> 
+	</div>
+<div class="sun">
+	<i class="fas fa-sun"></i>
+</div>
 
 </body>
 </html>
