change style color

--- a/css3Animations.html
+++ b/css3Animations.html
@@ -7,18 +7,18 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <style>
 .sun {
-	background-color: #f7ff00;
+	color: #f7ff00;
 	transition-duration: .8s;
 	transition-property: transform;
 	transform: rotate(360deg);
 }
   /*Animate sun*/
   @keyframes .sun {
-  	0% {background-color: #f7ff00; }
-  	25% {background-color: #faff60; }
-  	50% {background-color: #fcff9f; }
-  	75% {background-color: #faff60; }
-  	100% {background-color: #f7ff00; }
+  	0% {color: #f7ff00; }
+  	25% {color: #faff60; }
+  	50% {color: #fcff9f; }
+  	75% {color: #faff60; }
+  	100% {color: #f7ff00; }
   }
 </style>
 </head>
