added animation name and duration

--- a/css3Animations.html
+++ b/css3Animations.html
@@ -11,9 +11,11 @@
 	transition-duration: .8s;
 	transition-property: transform;
 	transform: rotate(360deg);
+	animation-name: sunShining;
+	animation-duration: 4s;
 }
   /*Animate sun*/
-  @keyframes .sun {
+  @keyframes sunShining {
   	0% {color: #f7ff00; }
   	25% {color: #faff60; }
   	50% {color: #fcff9f; }
