add color for cloud and background color

--- a/css3Animations.html
+++ b/css3Animations.html
@@ -6,6 +6,12 @@
 <link rel="stylesheet" type="text/css" src="animations.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <style>
+body {
+	background: #333;
+}
+.cloud {
+	color: #C6C6C4;
+}
 .sun {
 	color: #f7ff00;
 	transition-duration: .8s;
@@ -36,7 +42,7 @@
 	<i class="fas fa-tint"></i> 
 	</div>
 <div class="sun">
-	<i class="fas fa-sun"></i>
+	<i class="fas fa-sun fa-5x"></i>
 </div>
 <div class="snowflake">
 	<i class="fal fa-snowflake"></i>
