--- a/css3Animations.html
+++ b/css3Animations.html
@@ -22,11 +22,15 @@ body {
 }
   /*Animate sun*/
   @keyframes sunShining {
+  	/*
   	0% {color: #f7ff00; }
   	25% {color: #faff60; }
   	50% {color: #fcff9f; }
   	75% {color: #faff60; }
   	100% {color: #f7ff00; }
+  	*/
+  	from{color: #f7ff00;}
+  	to{color: #fcff9f}
   }
 </style>
 </head>
