--- a/css3Animations.html
+++ b/css3Animations.html
@@ -12,7 +12,7 @@ body {
 .cloud {
 	color: #C6C6C4;
 }
-.sun {
+#sun {
 	color: #f7ff00;
 	transition-duration: .8s;
 	transition-property: transform;
@@ -75,7 +75,7 @@ body {
 	<i class="fas fa-tint"></i> 
 	</div>
 <div class="sun">
-	<i class="fas fa-sun fa-5x"></i>
+	<i id="sun" class="fas fa-sun fa-5x"></i>
 </div>
 <div class="snowflake">
 	<i class="fal fa-snowflake"></i>
