--- a/css3Animations.html
+++ b/css3Animations.html
@@ -32,7 +32,7 @@ body {
   	100% {color: #f7ff00; }
   	*/
   	from{color: #f7ff00;}
-  	to{color: #fcff9f}
+  	to{color: #fff}
   }
 
   /* start spin animation */
