--- a/css3Animations.html
+++ b/css3Animations.html
@@ -20,7 +20,11 @@ body {
 	animation-name: sunShining;
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
-	animation:spin 4s linear infinite;
+	/*animation:spin 4s linear infinite;*/
+	-ms-transform: rotate(20deg); /* IE 9 */
+    -webkit-transform: rotate(20deg); /* Safari */
+    transform: rotate(20deg); /* Standard syntax */
+}
 }
   /*Animate sun*/
   @keyframes sunShining {
