--- a/css3Animations.html
+++ b/css3Animations.html
@@ -41,9 +41,11 @@ body {
 
   /* start spin animation */
 @-webkit-keyframes spin{
-	100% {
-		-webkit-transform: rotate(360deg);
-	}
+	0% {transform:rotate(20deg); }
+  	25% {transform:rotate(20deg); }
+  	50% {transform:rotate(20deg); }
+  	75% {transform:rotate(20deg); }
+  	100% {transform:rotate(20deg);}
 }
 @-moz-keyframes spin{
 	100% {
