--- a/css3Animations.html
+++ b/css3Animations.html
@@ -20,10 +20,8 @@ body {
 	animation-name: sunShining;
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
-	/*animation:spin 4s linear infinite;*/
-	-ms-transform: rotate(20deg); /* IE 9 */
-    -webkit-transform: rotate(20deg); /* Safari */
-    transform: rotate(20deg); /* Standard syntax */
+	animation:spin 4s linear infinite;
+	
 }
 }
   /*Animate sun*/
