add files for cssJavascript

--- a/index.html
+++ b/index.html
@@ -21,40 +21,40 @@
 				<tr>
 					<td><a href="basicJavaScript.html">Basic JavaScript</a></td>
 					<td><p>October 6, 2018</p></td>
-					<td><p>Passed Profiency</p></td>
+					<td><p>Passed Proficiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="javaScriptObjects.html">JavaScript Objects</a></td>
 					<td><p>October 6, 2018</p></td>
-					<td><p>Passed Profiency</p></td>
+					<td><p>Passed Proficiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="localStorage.html">JSON</a></td>
 					<td><p>October 11, 2018</p></td>
-					<td><p>Passed Profiency</p></td>
+					<td><p>Passed Proficiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="localStorage.html">Local Storage</a></td>
 					<td><p>October 11, 2018</p></td>
-					<td><p>Passed Profiency</p></td>
+					<td><p>Passed Proficiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="dom.html">DOM</a></td>
 					<td><p>October 6, 2018</p></td>
-					<td><p>Passed Profiency</p></td>
+					<td><p>Passed Proficiency</p></td>
 				</tr>
 				<tr>
 					<td><a href="jsEvents.html">CSS3 Transitions</a></td>
 					<td>November 8, 2018</td>
-					<td></td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="css3Transformations.html">CSS3 Transform</a></td>
 					<td>November 8, 2018</td>
-					<td></td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
-					<td><a href="css3TransitionAnimations.html">CSS3 Animations</a></td>
+					<td><a href="css3Animations.html">CSS3 Animations</a></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -66,7 +66,7 @@
 				<tr>
 					<td><a href="ajax.html">AJAX</a></td>
 					<td>October 17, 2018</td>
-					<td>Submitted</td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="jsEvents.html">JavaScript Events</a></td>
@@ -76,6 +76,11 @@
 				<tr>
 					<td><a href="https://hansen-m-sheri.github.io/html5Tags.html">HTML5 Tags</a></td>
 					<td>November 7, 2018</td>
+					<td>Passed Proficiency</td>
+				</tr>
+				<tr>
+					<td><a href="https://hansen-m-sheri.github.io/cssJavascript.html">CSS with Javascript</a></td>
+					<td>November 15, 2018</td>
 					<td></td>
 				</tr>
 			</tbody>
