--- a/css3Animations.html
+++ b/css3Animations.html
@@ -9,7 +9,7 @@
 body {
 	background: #333;
 }
-.cloud {
+.cloud1 {
 	color: #C6C6C4;
 }
 #sun {
@@ -38,33 +38,10 @@ body {
   }
 
   /* start spin animation */
-@-webkit-keyframes spin{
-	0%{}
-	100% {
-		-webkit-transform: rotate(360deg);
-	}
-}
-@-moz-keyframes spin{
-	0%{}
-	100% {
-		-moz-transform: rotate(360deg);
-	}
-}
-@-o-keyframes spin{
-	0%{}
-	100% {
-		-o-transform: rotate(360deg);
-	}
-}
-@-ms-keyframes spin{
-	0%{}
-	100% {
-		-ms-transform: rotate(360deg);
-	}
-}
+
 
 @keyframes spin{
-	0%{}
+	
 	100% {
 	transform: rotate(360deg);
 	}
@@ -74,10 +51,11 @@ body {
 <body>
 <div class="bg"></div>
 <h1>CSS3 Animations</h1>
-<!--
-<div class="cloud">
+
+<div class="cloud1">
 	<i class="fas fa-cloud fa-5x"></i>
 </div>
+<!--
 <div class="rain">
 	<i class="fas fa-raindrops"></i>
 	<i class="fas fa-tint"></i> 
