--- a/css3Animations.html
+++ b/css3Animations.html
@@ -41,10 +41,11 @@ body {
 
 
 @keyframes spin{
-	
-	100% {
-	transform: rotate(380deg);
-	}
+	0%{ transform: rotate(0deg); }
+	25% { transform: rotate(90deg); }
+	50% { transform: rotate(180deg); }
+	75% { transform: rotate(270deg); }
+	100% { transform: rotate(380deg);}
 }
 </style>
 </head>
