--- a/css3Animations.html
+++ b/css3Animations.html
@@ -11,6 +11,7 @@ body {
 }
 .cloud1 {
 	color: #C6C6C4;
+	position: relative;
 	animation-name: slide;
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
@@ -21,6 +22,7 @@ body {
 	position: absolute;
 	top: 30px;
 	left: 30px;
+
 }
 #sun {
 	color: #f7ff00;
