--- a/css3Animations.html
+++ b/css3Animations.html
@@ -16,6 +16,8 @@ body {
 	animation-duration: 4s;
 	animation-iteration-count: infinite;
 	z-index: -1;
+	top: 20px;
+	left: 20px;
 }
 .cloud2 {
 	color: #fff;
@@ -37,12 +39,9 @@ body {
 }
 
 @keyframes slide {
-	0% {left: 30px; top: 30px}
-	20% {left: 40px; top: 30px}
-	40% {left: 50px; top: 30px}
-	60% {left: 60px; top: 30px}
-	80% {left: 50px; top: 30px}
-	100% {left: 40px; top: 30px}
+	0% {left: 20px; top: 20px}
+	50% {left: 60px; top: 20px}
+	100% {left: 600px; top: 20px}
 	
 }
 
