--- a/css3Animations.html
+++ b/css3Animations.html
@@ -22,8 +22,8 @@ body {
 .cloud2 {
 	color: #fff;
 	position: absolute;
-	top: 30px;
-	left: 30px;
+	top: 100px;
+	
 
 }
 #sun {
@@ -85,7 +85,7 @@ body {
 	</div>
 -->
 <div class="snowflake">
-	<i id="snowflake" class="fal fa-snowflake"></i>
+	<i id="snowflake" class="<i class="fas fa-snowflake fa-5x"></i>"></i>
 </div> 
 <div class="sun">
 	<i id="sun" class="fas fa-sun fa-5x"></i>
