fix class tag for snowflake

--- a/css3Animations.html
+++ b/css3Animations.html
@@ -85,7 +85,7 @@ body {
 	</div>
 -->
 <div class="snowflake">
-	<i id="snowflake" class="<i class="fas fa-snowflake fa-5x"></i>"></i>
+	<i id="snowflake" class="fas fa-snowflake fa-5x"></i>
 </div> 
 <div class="sun">
 	<i id="sun" class="fas fa-sun fa-5x"></i>
