--- a/css3Animations.html
+++ b/css3Animations.html
@@ -36,11 +36,9 @@ body {
 }
 #snowflake {
 	color: #E0E9F2;
-	animation-name: fall;
-	animation-duration: 4s;
-	animation-iteration-count: infinite;
-	top: 150px;
-	left: 20px;
+	animation: fall 4s infinite, spin 4s infinite;
+	margin: 50px
+	margin-left	100px;
 }
 @keyframes fall {
 	0% { top: 80px;}
