--- a/css3Animations.html
+++ b/css3Animations.html
@@ -83,7 +83,7 @@ body {
 	</div>
 -->
 <div class="snowflake">
-	<i id="snowflake" class="fas fa-snowflake"></i>
+	<i id="snowflake" class="fas fa-snowflake fa-5x"></i>
 </div> 
 <div class="sun">
 	<i id="sun" class="fas fa-sun fa-5x"></i>
