--- a/css3Animations.html
+++ b/css3Animations.html
@@ -36,16 +36,12 @@ body {
 }
 #snowflake {
 	color: #E0E9F2;
-	animation: fall 4s infinite, spin 4s infinite;
+	animation: fall 4s ease infinite, spin 4s infinite;
 	margin: 50px
 	margin-left	100px;
 }
 @keyframes fall {
-	0% { top: 80px;}
-	25% {top: 85px;}
-	50% {top: 90px;}
-	75% {top: 95px;}
-	100% {top: 100px;}
+	50% { transform: translate(0px, 30px); }
 }
 @keyframes slide {
 	0% {left: 20px; top: 20px}
