--- a/css3Animations.html
+++ b/css3Animations.html
@@ -36,16 +36,12 @@ body {
 }
 #snowflake {
 	color: #E0E9F2;
-	animation: fall 4s ease infinite, spin 4s infinite;
+	animation: fall 4s ease infinite;
 	margin: 50px
 	margin-left	100px;
 }
 @keyframes fall {
-	0% { transform: translate(5px, 30px); }
-	25% { transform: translate(0px, 40px); }
-	50% { transform: translate(-5px, 50px); }
-	75% { transform: translate(0px, 60px); }
-	100% { transform: translate(5px, 70px); }
+	50% {transform: translate(opx, 50px);}
 }
 @keyframes slide {
 	0% {left: 20px; top: 20px}
