give more spacing

--- a/css3Animations.html
+++ b/css3Animations.html
@@ -37,6 +37,9 @@ body {
 #snowflake {
 	color: #E0E9F2;
 	animation: fall 4s ease infinite;
+	
+}
+.snowflake {
 	margin: 50px
 	margin-left	100px;
 }
