--- a/css3Animations.html
+++ b/css3Animations.html
@@ -9,7 +9,13 @@
 body {
 	background: #333;
 }
+.grid {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+
+}
 .cloud1 {
+	grid-column: 1/2;
 	color: #C6C6C4;
 	position: relative;
 	animation-name: slide;
@@ -20,6 +26,7 @@ body {
 	left: 20px;
 }
 .cloud2 {
+grid-column: 1/2;
 	color: #fff;
 	position: absolute;
 	top: 100px;
@@ -27,6 +34,7 @@ body {
 
 }
 #sun {
+
 	color: #f7ff00;
 	animation-name: spin;
 	animation-duration: 8s;
@@ -40,8 +48,12 @@ body {
 	
 }
 .snowflake {
+	grid-column: 2/3;
 	margin: 50px
 	margin-left	100px;
+}
+.sun {
+	grid-column: 3/4;
 }
 @keyframes fall {
 	100% {transform: translate(0px, 50px);}
@@ -65,28 +77,29 @@ body {
 }
 </style>
 </head>
-<body>
+<body >
 <div class="bg"></div>
 <h1>CSS3 Animations</h1>
 
-<div class="cloud1">
-	<i class="fas fa-cloud fa-5x"></i>
-</div>
-<div class="cloud2">
-	<i class="fas fa-cloud fa-5x"></i>
-</div>
-<!--
-<div class="rain">
-	<i class="fas fa-raindrops"></i>
-	<i class="fas fa-tint"></i> 
+<div class="grid">
+	<div class="cloud1">
+		<i class="fas fa-cloud fa-5x"></i>
 	</div>
--->
-<div class="snowflake">
-	<i id="snowflake" class="fas fa-snowflake fa-5x"></i>
-</div> 
-<div class="sun">
-	<i id="sun" class="fas fa-sun fa-5x"></i>
+	<div class="cloud2">
+		<i class="fas fa-cloud fa-5x"></i>
+	</div>
+	<!--
+	<div class="rain">
+		<i class="fas fa-raindrops"></i>
+		<i class="fas fa-tint"></i> 
+		</div>
+	-->
+	<div class="snowflake">
+		<i id="snowflake" class="fas fa-snowflake fa-5x"></i>
+	</div> 
+	<div class="sun">
+		<i id="sun" class="fas fa-sun fa-5x"></i>
+	</div>
 </div>
-
 </body>
 </html>
