--- a/weather.html
+++ b/weather.html
@@ -8,8 +8,14 @@
 <body>
 	<div class="bg_image">
 	</div>
-	<div class="location"></div>
-	<div class="timeAndDate"></div>
-	<div class="currentTemp"></div>
+	<div class="location">
+		<h3 id="location">Your location is: </h3>
+	</div>
+	<div class="timeAndDate">
+		<h5 id="timeAndDate">Your Time and Date</h5>
+	</div>
+	<div class="currentTemp">
+		<h1 id="currentTemp">80</h1>
+	</div>
 </body>
 </html>
