--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -5,6 +5,7 @@
  	body {
  		font-family: Arial, sans-serif;
  		background-color: #0E6C8B;
+
  	}
 	.maincontainer {
 		perspective: 1000px;
@@ -41,7 +42,9 @@
 		height: 100%;
 		backface-visibility: hidden;
 		overflow: hidden;
-		background: #ffc728;
+		/*background: #ffc728;*/
+		background: rgba(51, 51, 51, 1);
+		opacity: .5;
 		color: #333;
 		text-align: center;
 		border-radius: 20px;
@@ -54,7 +57,9 @@
 		width: 100%;
 		height: 100%;
 		backface-visibility: hidden;
-		background: #fafafa;
+		/*background: #fafafa;*/
+		background: rgba(51, 51, 51, 1);
+		opacity: .5;
 		color: #333;
 		transform: rotateY(180deg);
 		text-align: center;
