color change text

--- a/css3Transformations.html
+++ b/css3Transformations.html
@@ -45,7 +45,7 @@
 		/*background: #ffc728;*/
 		background: rgba(51, 51, 51, 1);
 		opacity: .5;
-		color: #333;
+		color: #fff;
 		text-align: center;
 		border-radius: 20px;
 		font-size: 18px;
@@ -60,7 +60,7 @@
 		/*background: #fafafa;*/
 		background: rgba(51, 51, 51, 1);
 		opacity: .5;
-		color: #333;
+		color: #fff;
 		transform: rotateY(180deg);
 		text-align: center;
 		border-radius: 20px;
