--- a/weather.html
+++ b/weather.html
@@ -6,16 +6,32 @@
 	<link rel="stylesheet" type="text/css" href="weather.css">
 </head>
 <body>
+	<!--Section 1 : Background image changes by weather-->
 	<div class="bg_image">
 	</div>
-	<div class="location">
-		<h3 id="location">Your location is: </h3>
+	<!-- Section 2: Change location - header section-->
+	<div class="changeLocation">
+		<input type="text"></div>
+		<button id="newLocation">Change Location</button>
+
 	</div>
-	<div class="timeAndDate">
-		<h5 id="timeAndDate">Your Time and Date</h5>
-	</div>
-	<div class="currentTemp">
-		<h1 id="currentTemp">80</h1>
+	<!--Section 3: Card-->
+	<div class="theCard">
+		<div class="theFront">
+			<h3 id="location">Your location is: </h3>
+			<h5 id="timeAndDate">Your Time and Date</h5>
+			<h1 id="currentTemp">80</h1>	
+		</div>
+		<div class="theBackToday">
+		</div>
+		<div class="theBack5Day"></div>
+	<div class="fiveDayFlex">
+		<div class="day" id="day1">
+		</div>
+		<div class="day" id="day2"></div>
+		<div class="day" id="day3"></div>
+		<div class="day" id="day4"></div>
+		<div class="day" id="day5"></div>
 	</div>
 </body>
 </html>
