added spots for temp and icon on 5day

--- a/weather.html
+++ b/weather.html
@@ -27,11 +27,25 @@
 		<div class="theBack5Day"></div>
 	<div class="fiveDayFlex">
 		<div class="day" id="day1">
+			<div class="icon" id="iconDay1"></div>
+			<div class="temp" id="tempDay1"></div>
 		</div>
-		<div class="day" id="day2"></div>
-		<div class="day" id="day3"></div>
-		<div class="day" id="day4"></div>
-		<div class="day" id="day5"></div>
+		<div class="day" id="day2">
+			<div class="icon" id="iconDay2"></div>
+			<div class="temp" id="tempDay2"></div>
+		</div>
+		<div class="day" id="day3">
+			<div class="icon" id="iconDay3"></div>
+			<div class="temp" id="tempDay3"></div>
+		</div>
+		<div class="day" id="day4">
+			<div class="icon" id="iconDay4"></div>
+			<div class="temp" id="tempDay4"></div>
+		</div>
+		<div class="day" id="day5">
+			<div class="icon" id="iconDay5"></div>
+			<div class="temp" id="tempDay5"></div>
+		</div>
 	</div>
 </body>
 </html>
