added main div for card and missing div tag

--- a/weather.html
+++ b/weather.html
@@ -15,36 +15,48 @@
 		<button id="newLocation">Change Location</button>
 
 	</div>
-	<!--Section 3: Card-->
-	<div class="theCard">
-		<div class="theFront">
-			<h3 id="location">Your location is: </h3>
-			<h5 id="timeAndDate">Your Time and Date</h5>
-			<h1 id="currentTemp">80</h1>	
+	<!--Section 3: MAIN DISPLAY-->
+	<div class="mainDisplay">
+		<div class="mainContainer">
+			<div class="theCard">
+				<div class="theFront">
+					<h3 id="location">Your location is: </h3>
+					<h5 id="timeAndDate">Your Time and Date</h5>
+					<h1 id="currentTemp">80</h1>	
+				</div>
+				<div class="theBackToday">
+					<h1 id="backCardCity">City</h1>
+					<h5 id="description"> Cloudy</h5>
+					<table>
+						<tr>
+							<td>Temperature:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 		</div>
-		<div class="theBackToday">
-		</div>
-		<div class="theBack5Day"></div>
-	<div class="fiveDayFlex">
-		<div class="day" id="day1">
-			<div class="icon" id="iconDay1"></div>
-			<div class="temp" id="tempDay1"></div>
-		</div>
-		<div class="day" id="day2">
-			<div class="icon" id="iconDay2"></div>
-			<div class="temp" id="tempDay2"></div>
-		</div>
-		<div class="day" id="day3">
-			<div class="icon" id="iconDay3"></div>
-			<div class="temp" id="tempDay3"></div>
-		</div>
-		<div class="day" id="day4">
-			<div class="icon" id="iconDay4"></div>
-			<div class="temp" id="tempDay4"></div>
-		</div>
-		<div class="day" id="day5">
-			<div class="icon" id="iconDay5"></div>
-			<div class="temp" id="tempDay5"></div>
+		<div class="fiveDayFlex">
+			<div class="day" id="day1">
+				<div class="icon" id="iconDay1"></div>
+				<div class="temp" id="tempDay1"></div>
+			</div>
+			<div class="day" id="day2">
+				<div class="icon" id="iconDay2"></div>
+				<div class="temp" id="tempDay2"></div>
+			</div>
+			<div class="day" id="day3">
+				<div class="icon" id="iconDay3"></div>
+				<div class="temp" id="tempDay3"></div>
+			</div>
+			<div class="day" id="day4">
+				<div class="icon" id="iconDay4"></div>
+				<div class="temp" id="tempDay4"></div>
+			</div>
+			<div class="day" id="day5">
+				<div class="icon" id="iconDay5"></div>
+				<div class="temp" id="tempDay5"></div>
+			</div>
 		</div>
 	</div>
 </body>
