moved wrapper to contain all body add css styles for card

--- a/weather.html
+++ b/weather.html
@@ -6,17 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="weather.css">
 </head>
 <body>
-	<!--Section 1 : Background image changes by weather-->
-	<div class="bg_image">
-	</div>
-	<!-- Section 2: Change location - header section-->
-	<div class="changeLocation">
-		<input type="text"></div>
-		<button id="newLocation">Change Location</button>
+	<div class="mainWrapper">
+		<!--Section 1 : Background image changes by weather-->
+		<div class="bg_image">
+		</div>
+		<!-- Section 2: Change location - header section-->
+		<div class="changeLocation">
+			<input type="text"></div>
+			<button id="newLocation">Change Location</button>
 
-	</div>
-	<!--Section 3: MAIN DISPLAY-->
-	<div class="mainDisplay">
+		</div>
+		<!--Section 3: DISPLAY-->
+	
 		<div class="mainContainer">
 			<div class="theCard">
 				<div class="theFront">
