fix </div> for mainWrapper

--- a/weather.html
+++ b/weather.html
@@ -12,9 +12,8 @@
 		</div>
 		<!-- Section 2: Change location - header section-->
 		<div class="changeLocation">
-			<input type="text"></div>
+			<input type="text">
 			<button id="newLocation">Change Location</button>
-
 		</div>
 		<!--Section 3: DISPLAY-->
 	
