add table data and resize items

--- a/weather.html
+++ b/weather.html
@@ -12,7 +12,7 @@
 		</div>
 		<!-- Section 2: Change location - header section-->
 		<div class="changeLocation">
-			<input type="text">
+			<input id="inputLocation" type="text">
 			<button id="newLocation">Change Location</button>
 		</div>
 		<!--Section 3: DISPLAY-->
@@ -24,12 +24,40 @@
 					<h5 id="timeAndDate">Your Time and Date</h5>
 					<h1 id="currentTemp">80</h1>	
 				</div>
-				<div class="theBackToday">
+				<div class="theBack">
 					<h1 id="backCardCity">City</h1>
 					<h5 id="description"> Cloudy</h5>
 					<table>
 						<tr>
 							<td>Temperature:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Pressure:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Humidity:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Min Temp:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Max Temp:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Wind:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Sunrise:</td>
+							<td id="tableTemp">14</td>
+						</tr>
+						<tr>
+							<td>Sunset:</td>
 							<td id="tableTemp">14</td>
 						</tr>
 					</table>
