add font family

--- a/weather.html
+++ b/weather.html
@@ -4,6 +4,8 @@
 	<title>Sheri Hansen Weather App</title>
 	<script src="weather.js"></script>
 	<link rel="stylesheet" type="text/css" href="weather.css">
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
 </head>
 <body>
 	<div class="mainWrapper">
