--- a/weather.html
+++ b/weather.html
@@ -5,7 +5,7 @@
 	<script src="weather.js"></script>
 	<link rel="stylesheet" type="text/css" href="weather.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
+
 </head>
 <body>
 	<div class="mainWrapper">
@@ -29,34 +29,46 @@
 				<div class="theBack">
 					<h1 id="backCardCity">City</h1>
 					<h5 id="description"> Cloudy</h5>
-					<table>
-						<tr>
-							<td>Temperature:</td>
-							<td id="tableTemp">14</td>
-							<td>Humidity:</td>
-							<td id="tableTemp">14</td>
-						</tr>
-						<tr>
-							<td>Pressure:</td>
-							<td id="tableTemp">14</td>
-							<td>Wind:</td>
-							<td id="tableTemp">14</td>
-						</tr>
-						
-						<tr>
-							<td>Min Temp:</td>
-							<td id="tableTemp">14</td>
-							<td>Sunrise:</td>
-							<td id="tableTemp">14</td>
-						</tr>
-						<tr>
-							<td>Max Temp:</td>
-							<td id="tableTemp">14</td>
-							<td>Sunset:</td>
-							<td id="tableTemp">14</td>
-						</tr>
-						
-					</table>
+					<div class="tempTable">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+						</table>
+					</div>
+					<div class="miscTable">
+						<table>
+							<tr>
+								<td>Pressure:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Wind:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Sunrise:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+							<tr>
+								<td>Sunset:</td>
+								<td id="tableTemp">14</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
