--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				</tr>
 				<tr>
 					<td><a href="css3Animations.html">CSS3 Animations</a></td>
-					<td></td>
-					<td></td>
+					<td>November 19, 2018</td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="css3TransitionAnimations.html">CSS3 and JavaScript</a></td>
@@ -81,7 +81,7 @@
 				<tr>
 					<td><a href="https://hansen-m-sheri.github.io/cssJavascript.html">CSS with Javascript</a></td>
 					<td>November 15, 2018</td>
-					<td></td>
+					<td>Passed Proficiency</td>
 				</tr>
 				<tr>
 					<td><a href="https://hansen-m-sheri.github.io/weather.html">Final Project!!!!</a></td>
