add items to portfolio

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
 					<td></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td><a href="https://hansen-m-sheri.github.io/3monthProjects.html">Final Project!!!!</a></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</tbody>
 			
 		</table>
