--- a/personalPortfolio.html
+++ b/personalPortfolio.html
@@ -40,13 +40,13 @@
 			<h3>Website for Piano Teacher, take incoming students - coming Dec 21, 2018</h3>
 		</div>
 		<div class="index-boxlink-square">
-			<a href="assign07.html" <h3>University Website</h3></a>
+			<a href="assign07.html" ><h3>University Website</h3></a>
 		</div>
 		<div class="index-boxlink-square">
-			<a href="assign04.html"<h3>Basic Mortgage Calculator</h3></a>
+			<a href="assign04.html"><h3>Basic Mortgage Calculator</h3></a>
 		</div>
 		<div class="index-boxlink-rectangle">
-			<a href="assign05.html"<h3>Customer Purchase Form</h3></a>
+			<a href="assign05.html"><h3>Customer Purchase Form</h3></a>
 		</div>
 		
 	</section>
