add contact info to portfolio and link to resume

--- a/personalPortfolio.html
+++ b/personalPortfolio.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 	<header>
-		<h3>sh</h3>
+		<a href="Hansen_Sheri_Resume_BW2018.docx"><h3>Sheri Hansen</h3>
+		<h5>208-761-8466 || www.linkedin.com/in/sheri-hansen || https://sherih84015.wixsite.com/sherihansen</h5>
 	</header>
 	
 	<main>
