--- a/personalPortfolio.html
+++ b/personalPortfolio.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<a href="Hansen_Sheri_Resume_BW2018.docx"><h3>Sheri Hansen</h3>
-		<h5>208-761-8466 || www.linkedin.com/in/sheri-hansen || https://sherih84015.wixsite.com/sherihansen</h5>
+		
 	</header>
 	
 	<main>
@@ -49,7 +49,9 @@
 				<li><a href="#logo">Top of page</a></li>
 				<li>Copyright &copy: 2018</li>
 			</ul>
-		
+		<div class="footer-links">
+			<h5>208-761-8466 || www.linkedin.com/in/sheri-hansen || https://sherih84015.wixsite.com/sherihansen</h5>
+		</div>
 		<!--<div class="footer-sm">
 			<a href="#">
 				<i class="fab fa-facebook fa-2x" style="color: #fff"></i>
