comment out css link for testing

--- a/weather.html
+++ b/weather.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sheri Hansen Weather App</title>
 	<script src="weather.js"></script>
-	<link rel="stylesheet" type="text/css" href="weather.css">
+	<!--<link rel="stylesheet" type="text/css" href="weather.css">-->
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 
 </head>
