--- a/weather.html
+++ b/weather.html
@@ -37,15 +37,15 @@
 							</tr>
 							<tr>
 								<td>Humidity:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableHumidity">14</td>
 							</tr>
 							<tr>
 								<td>Min Temp:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableMinTemp">14</td>
 							</tr>
 							<tr>
 								<td>Max Temp:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableMaxTemp">14</td>
 							</tr>
 						</table>
 					</div>
@@ -53,19 +53,19 @@
 						<table>
 							<tr>
 								<td>Pressure:</td>
-								<td id="tableTemp">14</td>
+								<td id="tablePress">14</td>
 							</tr>
 							<tr>
 								<td>Wind:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableWind">14</td>
 							</tr>
 							<tr>
 								<td>Sunrise:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableSunrise">14</td>
 							</tr>
 							<tr>
 								<td>Sunset:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableSunset">14</td>
 							</tr>
 						</table>
 					</div>
