remove default values

--- a/weather.html
+++ b/weather.html
@@ -24,7 +24,7 @@
 				<div class="theFront">
 					<h3 id="location">Your location is: </h3>
 					<h5 id="timeAndDate">Your Time and Date</h5>
-					<h1 id="currentTemp">80</h1>	
+					<h1 id="currentTemp"></h1>	
 				</div>
 				<div class="theBack">
 					<h1 id="backCardCity">City</h1>
@@ -33,19 +33,19 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tableTemp">14</td>
+								<td id="tableTemp"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
-								<td id="tableHumidity">14</td>
+								<td id="tableHumidity"></td>
 							</tr>
 							<tr>
 								<td>Min Temp:</td>
-								<td id="tableMinTemp">14</td>
+								<td id="tableMinTemp"></td>
 							</tr>
 							<tr>
 								<td>Max Temp:</td>
-								<td id="tableMaxTemp">14</td>
+								<td id="tableMaxTemp"></td>
 							</tr>
 						</table>
 					</div>
@@ -53,19 +53,19 @@
 						<table>
 							<tr>
 								<td>Pressure:</td>
-								<td id="tablePress">14</td>
+								<td id="tablePress"></td>
 							</tr>
 							<tr>
 								<td>Wind:</td>
-								<td id="tableWind">14</td>
+								<td id="tableWind"></td>
 							</tr>
 							<tr>
 								<td>Sunrise:</td>
-								<td id="tableSunrise">14</td>
+								<td id="tableSunrise"></td>
 							</tr>
 							<tr>
 								<td>Sunset:</td>
-								<td id="tableSunset">14</td>
+								<td id="tableSunset"></td>
 							</tr>
 						</table>
 					</div>
