add cards for 5day

--- a/weather.html
+++ b/weather.html
@@ -21,7 +21,7 @@
 	
 		<div class="mainContainer">
 			<div class="theCard">
-				<div class="theFront">
+				<div class="theFront" >
 					<h3 id="location">Your location is: </h3>
 					<h5 id="timeAndDate">Your Time and Date</h5>
 					<h1 id="currentTemp"></h1>	
@@ -73,26 +73,139 @@
 			</div>
 		</div>
 		<div class="fiveDayFlex">
-			<div class="day" id="day1">
-				<div class="icon" id="iconDay1"></div>
-				<div class="temp" id="tempDay1"></div>
-			</div>
-			<div class="day" id="day2">
-				<div class="icon" id="iconDay2"></div>
-				<div class="temp" id="tempDay2"></div>
-			</div>
-			<div class="day" id="day3">
-				<div class="icon" id="iconDay3"></div>
-				<div class="temp" id="tempDay3"></div>
-			</div>
-			<div class="day" id="day4">
-				<div class="icon" id="iconDay4"></div>
-				<div class="temp" id="tempDay4"></div>
-			</div>
-			<div class="day" id="day5">
-				<div class="icon" id="iconDay5"></div>
-				<div class="temp" id="tempDay5"></div>
-			</div>
+			<div class="fiveDayCard">
+				<div class="theFrontFive" id="day1">
+					<div class="icon" id="iconDay1"></div>
+					<div class="temp" id="tempDay1"></div>	
+				</div>
+				<div class="theBackFive" id="backday1">
+					<div class="tempDetails">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tempDay1"></td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="humidityDay1"></td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="minTempDay1"></td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="maxTempDay1"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="theFrontFive" id="day2">
+					<div class="icon" id="iconDay2"></div>
+					<div class="temp" id="tempDay2"></div>	
+				</div>
+				<div class="theBackFive" id="backday2">
+					<div class="tempDetails">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tempDay2"></td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="humidityDay2"></td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="minTempDay2"></td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="maxTempDay2"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="theFrontFive" id="day3">
+					<div class="icon" id="iconDay3"></div>
+					<div class="temp" id="tempDay3"></div>	
+				</div>
+				<div class="theBackFive" id="day3">
+					<div class="tempDetails">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tempDay3"></td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="humidityDay3"></td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="minTempDay3"></td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="maxTempDay3"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="theFrontFive" id="day3">
+					<div class="icon" id="iconDay3"></div>
+					<div class="temp" id="tempDay3"></div>	
+				</div>
+				<div class="theBackFive" id="day4">
+					<div class="tempDetails">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tempDay4"></td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="humidityDay4"></td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="minTempDay4"></td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="maxTempDay4"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="theFrontFive" id="day5">
+					<div class="icon" id="iconDay5"></div>
+					<div class="temp" id="tempDay5"></div>	
+				</div>
+				<div class="theBackFive" id="day5">
+					<div class="tempDetails">
+						<table>
+							<tr>
+								<td>Temperature:</td>
+								<td id="tempDay5"></td>
+							</tr>
+							<tr>
+								<td>Humidity:</td>
+								<td id="humidityDay5"></td>
+							</tr>
+							<tr>
+								<td>Min Temp:</td>
+								<td id="minTempDay5"></td>
+							</tr>
+							<tr>
+								<td>Max Temp:</td>
+								<td id="maxTempDay5"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			
+			
 		</div>
 	</div>
 </body>
