add date to front of card

--- a/weather.html
+++ b/weather.html
@@ -75,6 +75,7 @@
 		<div class="fiveDayFlex">
 			<div class="fiveDayCard">
 				<div class="theFrontFive" id="day1">
+					<div class="date" id="dateDay1"></div>
 					<div class="icon" id="iconDay1"></div>
 					<div class="temp" id="tempDay1"></div>	
 				</div>
@@ -101,6 +102,7 @@
 					</div>
 				</div>
 				<div class="theFrontFive" id="day2">
+					<div class="date" id="dateDay2"></div>
 					<div class="icon" id="iconDay2"></div>
 					<div class="temp" id="tempDay2"></div>	
 				</div>
@@ -127,6 +129,7 @@
 					</div>
 				</div>
 				<div class="theFrontFive" id="day3">
+					<div class="date" id="dateDay3"></div>
 					<div class="icon" id="iconDay3"></div>
 					<div class="temp" id="tempDay3"></div>	
 				</div>
@@ -152,9 +155,10 @@
 						</table>
 					</div>
 				</div>
-				<div class="theFrontFive" id="day3">
-					<div class="icon" id="iconDay3"></div>
-					<div class="temp" id="tempDay3"></div>	
+				<div class="theFrontFive" id="day4">
+					<div class="date" id="dateDay4"></div>
+					<div class="icon" id="iconDay4"></div>
+					<div class="temp" id="tempDay4"></div>	
 				</div>
 				<div class="theBackFive" id="day4">
 					<div class="tempDetails">
@@ -179,6 +183,7 @@
 					</div>
 				</div>
 				<div class="theFrontFive" id="day5">
+					<div class="date" id="dateDay5"></div>
 					<div class="icon" id="iconDay5"></div>
 					<div class="temp" id="tempDay5"></div>	
 				</div>
@@ -206,6 +211,7 @@
 				</div>
 			
 			
+
 		</div>
 	</div>
 </body>
