--- a/weather.html
+++ b/weather.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sheri Hansen Weather App</title>
 	<script src="weather.js"></script>
-	<!--<link rel="stylesheet" type="text/css" href="weather.css">-->
+	<link rel="stylesheet" type="text/css" href="weather.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
 
 </head>
@@ -84,7 +84,7 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tempDay1"></td>
+								<td id="backTempDay1"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
@@ -111,7 +111,7 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tempDay2"></td>
+								<td id="backTempDay2"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
@@ -138,7 +138,7 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tempDay3"></td>
+								<td id="backTempDay3"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
@@ -165,7 +165,7 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tempDay4"></td>
+								<td id="backTempDay4"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
@@ -192,7 +192,7 @@
 						<table>
 							<tr>
 								<td>Temperature:</td>
-								<td id="tempDay5"></td>
+								<td id="backTempDay5"></td>
 							</tr>
 							<tr>
 								<td>Humidity:</td>
