add html intro page

--- a/weather.html
+++ b/weather.html
@@ -8,6 +8,11 @@
 
 </head>
 <body>
+	<div class="intro" id="welcome">
+		<span class="text1">Welcome to Weather App</span>
+		<span class="text2">Enter your City, Country</span>
+		<div>search bar</div>
+	</div>
 	<div class="mainWrapper">
 		<!--Section 1 : Background image changes by weather-->
 		<div class="bg_image">
