change msg and test left %

--- a/weather.html
+++ b/weather.html
@@ -10,8 +10,8 @@
 <body>
 	<div class="intro" id="welcome">
 		<span class="text1">Welcome to Weather App</span>
-		<span class="text2">Enter your City, Country</span>
-		<div>search bar</div>
+		<span class="text2">Enter your Zip</span>
+		<div class="searchbar">search bar</div>
 	</div>
 	<div class="mainWrapper">
 		<!--Section 1 : Background image changes by weather-->
