added search bar base div

--- a/weather.html
+++ b/weather.html
@@ -11,7 +11,10 @@
 	<div class="intro" id="welcome">
 		<span class="text1">Welcome to Weather App</span>
 		<span class="text2">Enter your Zip</span>
-		<div class="searchbar">search bar</div>
+		<div class="searchbar">
+			<input class="searchText" type="text" name="" placeholder="Enter your zip">
+			<a class="searchBtn" href="#"></a>
+		</div>
 	</div>
 	<div class="mainWrapper">
 		<!--Section 1 : Background image changes by weather-->
