add fontawesome icon

--- a/weather.html
+++ b/weather.html
@@ -5,6 +5,7 @@
 	<script src="weather.js"></script>
 	<link rel="stylesheet" type="text/css" href="weather.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -13,7 +14,10 @@
 		<span class="text2">Enter your Zip</span>
 		<div class="searchbar">
 			<input class="searchText" type="text" name="" placeholder="Enter your zip">
-			<a class="searchBtn" href="#"></a>
+			<a class="searchBtn" href="#">
+				<i class="fas fa-search-location"></i>
+				<!--<button type="button" id="zipBtn">Zip</button>-->
+			</a>
 		</div>
 	</div>
 	<div class="mainWrapper">
