turning icon into button

--- a/weather.html
+++ b/weather.html
@@ -15,7 +15,8 @@
 		<div class="searchbar">
 			<input class="searchText" type="text" name="" placeholder="Enter your zip">
 			<a class="searchBtn" href="#">
-				<i class="fas fa-search-location"></i>
+				<button type="button" id="submitBtn" ><i class="fas fa-search-location"></i>
+				</button>
 				<!--<button type="button" id="zipBtn">Zip</button>-->
 			</a>
 		</div>
