work on search icon

--- a/weather.html
+++ b/weather.html
@@ -15,9 +15,7 @@
 		<div class="searchbar">
 			<input class="searchText" type="text" name="" placeholder="Enter your zip">
 			<a class="searchBtn" href="#">
-				<button type="button" id="submitBtn" ><i class="fas fa-search-location"></i>
-				</button>
-				<!--<button type="button" id="zipBtn">Zip</button>-->
+				<i class="fas fa-search-location" id="searchIcon"></i>
 			</a>
 		</div>
 	</div>
